--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ Aufgabenblatt 2/index.html
 Aufgabenblatt 2/index.js
 Aufgabenblatt 2/Studienbescheinigung SS21.pdf
 Aufgabenblatt 2/WEB-A5-Hristov-Aleksandar-1722385-1a5.mp4
+app.db
+post.db
+__pycache__/app.cpython-39.pyc
+__pycache__/database.cpython-39.pyc
