--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,16 @@ Aufgabenblatt 2/index.html
 Aufgabenblatt 2/index.js
 Aufgabenblatt 2/Studienbescheinigung SS21.pdf
 Aufgabenblatt 2/WEB-A5-Hristov-Aleksandar-1722385-1a5.mp4
-app.db
+*.db
 post.db
 __pycache__/app.cpython-39.pyc
 __pycache__/database.cpython-39.pyc
 app.db
 post.db
 __pycache__/app.cpython-39.pyc
+app.db
+post.db
+WEB-A5-VM 1.ova
+__pycache__/app.cpython-39.pyc
+__pycache__/database.cpython-39.pyc
+app.db
